--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
           </svg>
           <span>Seenons</span>
         </div>
+        <button id="settings-btn" class="btn btn-ghost btn-icon" title="Settings">
+          <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <circle cx="12" cy="12" r="3"/>
+            <path d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 010 2.83 2 2 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-2 2 2 2 0 01-2-2v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 01-2-2 2 2 0 012-2h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 010-2.83 2 2 0 012.83 0l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 012-2 2 2 0 012 2v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 0 2 2 0 010 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 012 2 2 2 0 01-2 2h-.09a1.65 1.65 0 00-1.51 1z"/>
+          </svg>
+        </button>
       </div>
     </header>
 
@@ -129,6 +135,14 @@
                     <button type="button" id="photo-remove-btn" class="btn btn-ghost" style="display: none;">
                       Remove
                     </button>
+                    <button type="button" id="analyze-btn" class="btn btn-accent" style="display: none;">
+                      <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M12 2a4 4 0 0 1 4 4c0 1.95-2 3-2 8h-4c0-5-2-6.05-2-8a4 4 0 0 1 4-4z"/>
+                        <path d="M10 22h4"/>
+                        <path d="M10 18h4"/>
+                      </svg>
+                      Analyze with AI
+                    </button>
                   </div>
                 </div>
               </section>
@@ -231,6 +245,42 @@
 
     <!-- Toast Notification -->
     <div id="toast"></div>
+
+    <!-- Settings Modal -->
+    <div id="settings-modal" class="modal">
+      <div class="modal-backdrop"></div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>Settings</h2>
+          <button id="settings-close-btn" class="btn btn-ghost btn-icon" title="Close">
+            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <line x1="18" y1="6" x2="6" y2="18"/>
+              <line x1="6" y1="6" x2="18" y2="18"/>
+            </svg>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="settings-section">
+            <h3>AI Analysis (Gemini API)</h3>
+            <p class="settings-description">
+              Enable AI-powered waste analysis by adding your Google Gemini API key. 
+              The AI will analyze photos to detect waste streams and estimate weights.
+            </p>
+            <div class="form-group">
+              <label for="api-key-input" class="form-label">Gemini API Key</label>
+              <input type="password" id="api-key-input" class="input" placeholder="Enter your API key...">
+              <p class="form-hint">
+                Get your free API key at <a href="https://ai.google.dev/" target="_blank" rel="noopener">ai.google.dev</a>
+              </p>
+            </div>
+            <div class="api-key-status" id="api-key-status"></div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button id="settings-save-btn" class="btn btn-primary">Save Settings</button>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script type="module" src="js/app.js"></script>
