--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
     <header class="app-header">
       <div class="app-header-inner">
         <div class="app-logo">
-          <svg viewBox="0 0 40 40" fill="none">
-            <circle cx="20" cy="20" r="17" stroke="#00A887" stroke-width="3"/>
-            <path d="M20 10C20 10 13 15 13 20C13 25 16 29 20 29C24 29 27 25 27 20C27 15 20 10 20 10Z" fill="#00A887"/>
-          </svg>
+          <img src="https://assets.public.seenons.com/logo/seenons-logo.svg" alt="Seenons" class="logo-img">
           <span>Seenons</span>
         </div>
         <button id="settings-btn" class="btn btn-ghost btn-icon" title="Settings">
